--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -12,6 +12,20 @@
   font-style: italic;
 }
 
+@font-face {
+  font-family: 'BeVietnamPro';
+  src: url('../src/assets/fonts/BeVietnamPro/BeVietnamPro[wght].ttf') format('truetype');
+  font-weight: 100 900;  
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'BeVietnamPro';
+  src: url('../src/assets/fonts/BeVietnamPro/BeVietnamPro-Italic[wght].ttf') format('truetype');
+  font-weight: 100 900;
+  font-style: italic;
+}
+
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', 'BeVietnamPro';
 }
