--- a/front-end/src/components/ConfirmedDialog/ConfirmedDialog.css
+++ b/front-end/src/components/ConfirmedDialog/ConfirmedDialog.css
@@ -1,4 +1,5 @@
 .modal-overlay {
+    display: block;
     position: fixed;
     top: 0;
     left: 0;
@@ -14,8 +15,8 @@
 .modal-container {
     background-color: white;
     border-radius: 20px;
-    width: 90%;
-    max-width: 550px;
+    width: 40%;
+    max-width: 400px;
     padding: 20px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
     text-align: center;
@@ -100,14 +101,14 @@
 }
 
 .modal-title {
-    font-size: 28px;
+    font-size: 24px;
     font-weight: bold;
     margin-bottom: 15px;
     color: #444;
 }
 
 .modal-text {
-    font-size: 16px;
+    font-size: 14px;
     color: #666;
     line-height: 1.5;
     margin: 0 auto;
@@ -122,6 +123,7 @@
 }
 
 .cancel-button {
+    font-family: 'Montserrat';
     padding: 15px 30px;
     background-color: #f0f0f0;
     color: #555;
@@ -134,6 +136,7 @@
 }
 
 .confirm-button {
+    font-family: 'Montserrat';
     padding: 15px 30px;
     color: white;
     border: none;
