--- a/front-end/src/components/Navbar/Navbar.css
+++ b/front-end/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar-section {
    width: 16vw;
-   height: 100vh;
+   height: auto;
    background-color: #fff;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
    display: flex;
