--- a/front-end/src/components/Navbar/Navbar.css
+++ b/front-end/src/components/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 .navbar-section {
    width: 16vw;
    height: auto;
+   max-height: 100vh;
    background-color: #fff;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
    display: flex;
@@ -32,7 +33,6 @@
    width: 100%;
    flex: 1; 
    overflow-y: auto; 
-   max-height: calc(100vh - 12vw); 
 }
 
 .navbar-item {
@@ -90,7 +90,7 @@
 .navbar-item .user-name {
    color: #000;
    font-size: 1vw;
-   font-weight: 900;
+   font-weight: 500;
 }
 
 .navbar-item .user-id {
@@ -110,8 +110,6 @@
 }
 
 #navbar-logout {
-   position: absolute;
-   bottom: 0;
    border-top: 0.1vw solid #E0E0E9;
    background: #FDFDFD;
 }
