--- a/front-end/src/pages/LogInPage/LogInPage.css
+++ b/front-end/src/pages/LogInPage/LogInPage.css
@@ -1,5 +1,5 @@
 .log-in-page{
-    max-width: 100vw;
+    width: 100vw;
     height: 100vh;
     background: linear-gradient(0deg, #FDFDFD 16.63%, #AEE8FF 110.04%);
     display: flex;
