feat(P2BI-466): add personal profile management page

--- a/front-end/src/pages/PersonalProfilePage/PersonalProfilePage.css
+++ b/front-end/src/pages/PersonalProfilePage/PersonalProfilePage.css
@@ -1,6 +1,6 @@
 .personal-profile-page {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow-x: hidden;
     max-height: 100vh;
     display: flex;
