--- a/front-end/src/components/ImageUploadController/ImageUploadController.css
+++ b/front-end/src/components/ImageUploadController/ImageUploadController.css
@@ -8,6 +8,8 @@
 }
 
 .image-upload-box{
+    width: 100%;
+    height: 80%;
     aspect-ratio: 1/1;
     border: 2px dashed #ddd;
     border-radius: 8px;
