--- a/front-end/src/components/DataTable/DataTable.css
+++ b/front-end/src/components/DataTable/DataTable.css
@@ -1,3 +1,9 @@
+.data-paper-container {
+   td, span, div, p {
+      font-family: "BeVietnamPro";
+   }
+}
+
 .data-table-container::-webkit-scrollbar {
     width: 0.4vw;
     height: 0.4vw;
