--- a/front-end/src/pages/AccountsManagementPage/AccountsFormPage/AccountsFormPage.css
+++ b/front-end/src/pages/AccountsManagementPage/AccountsFormPage/AccountsFormPage.css
@@ -1,6 +1,6 @@
 .account-form-page {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow-x: hidden;
     max-height: 100vh;
     display: flex;
@@ -10,11 +10,12 @@
 .account-form-page .form-container {
     margin-top: 2vw;
     width: 100%;
+    height: 100vh;
     display: flex;
     align-self: center;
     flex-direction: column;
     overflow-y: auto;
-    flex: 1; /* Makes the form container take up the remaining space */
+    flex: 1; 
 }
 
 .account-form-page .form {
@@ -61,7 +62,7 @@
     }
 }
 
-.form-button {
+.account-form-page .form-button {
     align-self: flex-end;
     display: flex;
     gap: 2vw;
