--- a/front-end/src/pages/AccountsManagementPage/AccountsOverviewPage/AccountsOverviewPage.css
+++ b/front-end/src/pages/AccountsManagementPage/AccountsOverviewPage/AccountsOverviewPage.css
@@ -47,8 +47,6 @@
     display: flex;
 }
 
-.accounts-container {
-    .MuiPaper-root{
-        box-sizing: border-box;
-    }
+.accounts-container .MuiPaper-root{
+    box-sizing: border-box;
 }
