--- a/front-end/src/pages/ActivitiesManagementPage/ActivitiesFormPage/ActivitiesFormPage.css
+++ b/front-end/src/pages/ActivitiesManagementPage/ActivitiesFormPage/ActivitiesFormPage.css
@@ -1,4 +1,4 @@
-.form-page{
+.activities-form-page {
     width: 100%;
     overflow-x: hidden;
     max-height: 100vh;
@@ -6,7 +6,7 @@
     flex-direction: column;
 }
 
-.form-page .form-container{
+.activities-form-page .form-container {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -14,7 +14,7 @@
     overflow-y: auto;
 }
 
-.form-page .form{
+.activities-form-page .form {
     margin: 2%;
     width: 85%;
     align-self: center;
@@ -22,33 +22,30 @@
     flex-direction: column;
 }
 
-.form-page .form .form-top{
+.activities-form-page .form .form-top {
     display: flex;
     justify-content: space-between;
     margin-bottom: 2vw;
 }
 
-.form-page .form .form-top{
-    .form-left{
-        width: 40%;
-        height: auto;
-        display: flex;
-        justify-content: center;
-        align-content: center;
-    }
-
-    .form-right {
-        width: 50%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
-        gap: 1vw;
-    }
-
+.activities-form-page .form .form-top .form-left {
+    width: 40%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 
-.date-controller{
+.activities-form-page .form .form-top .form-right {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    gap: 1vw;
+}
+
+.date-controller {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -58,37 +55,38 @@
     width: 45%;
 }
 
-.rich-text-editor{
+.rich-text-editor {
     width: 100%;
 }
 
-.form-page .form .form-bottom {
+.activities-form-page .form .form-bottom {
     max-width: 80vw;
     display: flex;
     flex-direction: column;
     gap: 2vw;
 }
 
-.form-button{
+.form-button {
     align-self: flex-end;
     display: flex;
     gap: 2vw;
 }
 
-.form-page .form-container::-webkit-scrollbar {
+/* Scrollbar custom */
+.activities-form-page .form-container::-webkit-scrollbar {
     width: 0.4vw;
- }
- 
- .form-page .form-container::-webkit-scrollbar-track {
+}
+
+.activities-form-page .form-container::-webkit-scrollbar-track {
     background: #ffffff;
     border-radius: 0.1vw;
- }
- 
- .form-page .form-container::-webkit-scrollbar-thumb {
+}
+
+.activities-form-page .form-container::-webkit-scrollbar-thumb {
     background: #178DE2;
     border-radius: 0.1vw;
- }
- 
- .form-page .form-container::-webkit-scrollbar-thumb:hover {
+}
+
+.activities-form-page .form-container::-webkit-scrollbar-thumb:hover {
     background: #2886ca;
- }
+}
