--- a/front-end/src/components/TableDialog/TableDialog.css
+++ b/front-end/src/components/TableDialog/TableDialog.css
@@ -54,17 +54,14 @@
     margin-right: 1vw;
 }
 
-.table-modal-container{
-    .MuiPaper-root{
-        width: 95%!important;
-    }
-    
-    .MuiTableContainer-root{
-        max-height: 350px!important;
-    
-    }
-    
-    .MuiToolbar-root {
-        display: none!important;
-    }
+.table-modal-container .MuiPaper-root {
+    width: 95% !important;
+}
+
+.table-modal-container .MuiTableContainer-root {
+    max-height: 350px !important;
+}
+
+.table-modal-container .MuiToolbar-root {
+    display: none !important;
 }
