--- a/front-end/src/pages/PersonalProfilePage/PersonalProfilePage.css
+++ b/front-end/src/pages/PersonalProfilePage/PersonalProfilePage.css
@@ -157,13 +157,7 @@
     gap: 2vw;
 }
 
-.personal-profile-page {
-    .image-upload-box{
-    }
-    
-    .image-upload-container .thumbnail-img{
-        object-fit: cover;
-        aspect-ratio: 1/1;
-        
-    }
+.personal-profile-page .image-upload-container .thumbnail-img{
+    object-fit: cover;
+    aspect-ratio: 1/1;
 }
