Fix/CSS Nesting Issue (#24)
* fix: convert nested SCSS-like CSS to valid flat CSS syntax for deployment

* fix: convert nested SCSS-like CSS in Data Table file

--- a/front-end/src/components/DataTable/DataTable.css
+++ b/front-end/src/components/DataTable/DataTable.css
@@ -1,24 +1,25 @@
-.data-paper-container {
-   td, span, div, p {
-      font-family: "BeVietnamPro";
-   }
+.data-paper-container td,
+.data-paper-container span,
+.data-paper-container div,
+.data-paper-container p {
+   font-family: "BeVietnamPro";
 }
 
 .data-table-container::-webkit-scrollbar {
-    width: 0.4vw;
-    height: 0.4vw;
- }
+   width: 0.4vw;
+   height: 0.4vw;
+}
 
- .data-table-container::-webkit-scrollbar-track {
-    background: #ffffff;
-    border-radius: 0.1vw;
- }
+.data-table-container::-webkit-scrollbar-track {
+   background: #ffffff;
+   border-radius: 0.1vw;
+}
 
- .data-table-container::-webkit-scrollbar-thumb {
-    background: #178DE2;
-    border-radius: 0.1vw;
- }
+.data-table-container::-webkit-scrollbar-thumb {
+   background: #178DE2;
+   border-radius: 0.1vw;
+}
 
- .data-table-container::-webkit-scrollbar-thumb:hover {
-    background: #2886ca;
- } 
+.data-table-container::-webkit-scrollbar-thumb:hover {
+   background: #2886ca;
+}
