--- a/front-end/src/pages/PartnersSelectionPage/PartnersSelectionPage.css
+++ b/front-end/src/pages/PartnersSelectionPage/PartnersSelectionPage.css
@@ -1,4 +1,4 @@
-.partner-selection-page{
+.partner-selection-page {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -6,14 +6,14 @@
     box-sizing: border-box;
 }
 
-.partner-selection-page .header{
+.partner-selection-page .header {
     flex-shrink: 0;
 }
 
 .partner-list-section {
     box-sizing: content-box;
-    flex-grow: 1; 
-    overflow-y: auto; 
+    flex-grow: 1;
+    overflow-y: auto;
     display: flex;
     justify-content: center;
     padding: 2rem 0;
@@ -21,18 +21,24 @@
 
 .partner-list-section::-webkit-scrollbar {
     width: 0.4vw;
- }
- 
- .partner-list-section::-webkit-scrollbar-track {
+}
+
+.partner-list-section::-webkit-scrollbar-track {
     background: #ffffff;
     border-radius: 0.1vw;
- }
- 
- .partner-list-section::-webkit-scrollbar-thumb {
+}
+
+.partner-list-section::-webkit-scrollbar-thumb {
     background: #178DE2;
     border-radius: 0.1vw;
- }
- 
- .partner-list-section::-webkit-scrollbar-thumb:hover {
+}
+
+.partner-list-section::-webkit-scrollbar-thumb:hover {
     background: #2886ca;
- } 
+}
+
+@media (max-width: 480px) {
+    .partner-card-list {
+        width: 100%;
+    }
+}
