--- a/front-end/src/pages/WelcomePage/WelcomePage.css
+++ b/front-end/src/pages/WelcomePage/WelcomePage.css
@@ -21,3 +21,13 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+@media (max-width: 480px) {
+    .welcome-page img {
+        width: 60%!important;
+    }
+
+    .welcome-page p {
+        font-size: 12px!important;
+    }
+}
