--- a/front-end/src/components/ConfirmedDialog/ConfirmedDialog.css
+++ b/front-end/src/components/ConfirmedDialog/ConfirmedDialog.css
@@ -174,3 +174,37 @@
 .confirm-button.delete:hover {
     background-color: #e02d23;
 }
+
+@media (max-width: 480px) {
+    .modal-container {
+        width: 80%;
+        padding: 15px;
+    }
+
+    .modal-title {
+        font-size: 20px;
+    }
+
+    .modal-text {
+        font-size: 12px;
+    }
+
+    .cancel-button, .confirm-button {
+        font-size: 14px;
+        padding: 10px 20px;
+    }
+
+    .circle {
+        width: 50px;
+        height: 50px;
+    }
+
+    .circle:before {
+        width: 35px;
+        height: 35px;
+    }
+
+    .mark {
+        font-size: 20px;
+    }
+}
