--- a/front-end/src/components/Header/Header.css
+++ b/front-end/src/components/Header/Header.css
@@ -1,70 +1,87 @@
-.header{
-    width: 100%;
-    display: flex;
-    font-family: 'BeVietnamPro';
-    align-items: center;
-    padding: 1vw 3vw;
-    gap: 1em;
-    box-shadow: 0 0 1vw #292d327c;
-    z-index: 8;
-    box-sizing: border-box;
+.header {
+  width: 100%;
+  display: flex;
+  font-family: 'BeVietnamPro';
+  align-items: center;
+  padding: 1vw 3vw;
+  gap: 1em;
+  box-shadow: 0 0 1vw #292d327c;
+  z-index: 8;
+  box-sizing: border-box;
 }
 
-.header-icon{
-    padding: 0.4vw 0.7vw;
-    font-size: 1vw;
-    min-height: 10px;
-    color: #25272abf;
-    box-shadow: 0vw 0vw 0.5vw #292d327c;
-    border-radius: 0.5vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
+.header-icon {
+  padding: 0.4vw 0.7vw;
+  font-size: 1vw;
+  min-height: 10px;
+  color: #25272abf;
+  box-shadow: 0vw 0vw 0.5vw #292d327c;
+  border-radius: 0.5vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
 }
 
-.header-icon:hover{
-    background-color: #292d3218;
+.header-icon:hover {
+  background-color: #292d3218;
 }
 
-.header-content{
-    display: flex;
-    flex-direction: column;
-    gap: 0.2vw;
+.header-content {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2vw;
 }
 
 .header-breadcrumbs {
-    font-size: 1vw;
+  font-size: 1vw;
 }
-  
-  .header-breadcrumbs li, .header-breadcrumbs p {
-    font-size: 1vw;
+
+.header-breadcrumbs li,
+.header-breadcrumbs p {
+  font-size: 1vw;
+}
+
+.header-breadcrumbs a {
+  text-decoration: none;
+  color: inherit;
+  font-family: 'BeVietnamPro';
+}
+
+.header-breadcrumbs a:hover {
+  text-decoration: underline;
+}
+
+.header-breadcrumbs p {
+  font-weight: 600;
+  text-decoration: underline;
+  color: inherit;
+  font-family: 'BeVietnamPro';
+}
+
+
+.header-title {
+  font-size: 1.8vw;
+  font-weight: 700;
+  background: linear-gradient(180deg, #0083B0 0%, #00B4DB 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+@media (max-width: 480px) {
+  .header {
+    height: 50px;
   }
 
-  .header-breadcrumbs a {
-    text-decoration: none;
-    color: inherit;
-    font-family: 'BeVietnamPro';
-  }
-
-  .header-breadcrumbs a:hover{
-    text-decoration: underline;
-  }
-
+  .header-breadcrumbs li,
   .header-breadcrumbs p {
-    font-weight: 600;
-    text-decoration: underline;
-    color: inherit;
-    font-family: 'BeVietnamPro';
+    font-size: 8px;
   }
 
-
-.header-title{
-    font-size: 1.8vw;
+  .header-title {
     font-weight: 700;
-    background: linear-gradient(180deg, #0083B0 0%, #00B4DB 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    font-size: 14px;
+  }
 }
