--- a/front-end/src/components/Navbar/Navbar.css
+++ b/front-end/src/components/Navbar/Navbar.css
@@ -173,3 +173,191 @@
 .navbar-items-wrapper::-webkit-scrollbar-thumb:hover {
    background: #2886ca;
 }
+
+@media (max-width: 768px) {
+   .navbar-section{
+      width: 45px;
+      max-width: 45px;
+      min-height: 100vh;
+      transition: max-width 0.5s ease-in-out, width 0.5s ease-in-out;
+      position: absolute;
+   }
+   .navbar-item p {
+      display: none;
+   }
+   .dropdown-item{
+      display: none;
+   }
+   .navbar-item.user{
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
+   }
+   .navbar-item .user-avatar {
+      width: 35px;
+      height: 35px;
+      margin: 0;
+      padding: 10px 0;
+
+   }
+   .navbar-item-label, .dropdown-icon{
+      display: none;
+   }
+   .navbar-item-wrapper{
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+   }
+
+   .navbar-item-wrapper .navbar-item {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
+   }
+
+   .navbar-item-icon{
+      font-size: 20px;
+      padding: 15px 0;
+   }
+
+   .navbar-item.active{
+      background-color: transparent;
+   }
+   .navbar-item:hover, #navbar-logout:hover {
+      background-color: transparent;
+   }
+
+   .navbar-logo{
+      width: 30px;
+      padding: 10px 0;
+      margin-top: 0;
+   }
+
+   #navbar-logout{
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
+   }
+
+   .expand-container {
+      position: relative;
+      width: 100%;
+      height: 0;
+   }
+   
+   .expand-container .expand-icon {
+      width: 15px;
+      height: 15px;
+      position: absolute;
+      right: 0;
+      top: 50%;
+      transform: translateY(-50%) translateX(70%);
+      color: #fff;
+      padding: 5px;
+      background-color: #178DE2;
+      border-radius: 50%;
+   }
+
+   .navbar-section.expanded {
+      width: 300px;
+      min-height: 100vh;
+      max-width: 300px;
+      position: absolute;
+   }
+
+  .navbar-section.expanded .navbar-item p {
+      display: block;
+   }
+  .navbar-section.expanded .dropdown-item{
+      display: block;
+      height: 50px;
+   }
+
+   .navbar-section.expanded .dropdown-container.show{
+      max-height: 500px;
+      opacity: 1;
+   }
+
+  .navbar-section.expanded .navbar-item.user{
+      justify-content: left;
+   }
+
+  .navbar-section.expanded .navbar-item-label, .navbar-section.expanded .dropdown-icon{
+      display: block;
+   }
+  .navbar-section.expanded .navbar-item-wrapper{
+      width: 300px;
+      justify-content: left;
+   }
+
+  .navbar-section.expanded .navbar-item {
+      width: 300px;
+      justify-content: left;
+      padding: 0 10px;
+   }
+
+  .navbar-section.expanded .navbar-item-icon{
+      width: 25px;
+      font-size: 20px;
+      padding: 15px 0;
+      margin-right: 20px;
+   }
+
+  .navbar-section.expanded .navbar-item.active{
+      background-color: #178de23b;
+   }
+  .navbar-section.expanded .navbar-item:hover, #navbar-logout:hover {
+      background-color: #178de23b;
+   }
+
+  .navbar-section.expanded .navbar-logo{
+      width: 30px;
+      padding: 10px 0;
+      margin-top: 0;
+   }
+
+  .navbar-section.expanded  #navbar-logout{
+      width: 100%;
+      justify-content: left;
+      padding: 0 10px;
+   }
+
+   .navbar-section.expanded  #navbar-logout p {
+      text-wrap: nowrap;
+   }
+
+  .navbar-section.expanded .expand-container {
+      position: relative;
+      width: 100%;
+      height: 0;
+   }
+
+   .navbar-section.expanded p{
+      font-size: 15px;
+   }
+   
+   .navbar-section.expanded .user-info {
+      padding-left: 10px;
+   }
+
+   .navbar-section.expanded .user-info p {
+      font-size: 12px;
+      text-wrap: nowrap;
+   }
+
+   .navbar-section.expanded .dropdown-container.show{
+      padding-left: 10px;
+   }
+
+   .navbar-section.expanded .navbar-logo{
+      height: 30px;
+      width: auto;
+   }
+}
