--- a/front-end/src/pages/AccountsManagementPage/AccountsFormPage/AccountsFormPage.css
+++ b/front-end/src/pages/AccountsManagementPage/AccountsFormPage/AccountsFormPage.css
@@ -85,3 +85,11 @@
 .account-form-page .form-container::-webkit-scrollbar-thumb:hover {
     background: #2886ca;
 }
+
+@media (max-width: 480px){
+    .account-form-page .form .form-top {
+        width: 100%;
+        height: auto;
+        margin-bottom: 20px;
+    }
+}
