--- a/front-end/src/pages/BannersManagementPage/BannersFormPage/BannersFormPage.css
+++ b/front-end/src/pages/BannersManagementPage/BannersFormPage/BannersFormPage.css
@@ -1,4 +1,4 @@
-.form-page{
+.banner-form-page {
     width: 100%;
     overflow-x: hidden;
     max-height: 100vh;
@@ -6,7 +6,7 @@
     flex-direction: column;
 }
 
-.form-page .form-container{
+.banner-form-page .form-container {
     margin-top: 3vw;
     width: 100%;
     display: flex;
@@ -15,7 +15,7 @@
     overflow-y: auto;
 }
 
-.form-page .form{
+.banner-form-page .form {
     margin: 2%;
     width: 85%;
     align-self: center;
@@ -23,14 +23,14 @@
     flex-direction: column;
 }
 
-.form-page .form .form-top{
+.banner-form-page .form .form-top {
     display: flex;
     justify-content: space-between;
     margin-bottom: 2vw;
 }
 
-.form-page .form .form-top{
-    .form-left{
+.banner-form-page .form .form-top {
+    .form-left {
         width: 40%;
         height: auto;
         display: flex;
@@ -49,7 +49,7 @@
 
 }
 
-.date-controller{
+.date-controller {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -59,37 +59,57 @@
     width: 45%;
 }
 
-.rich-text-editor{
+.rich-text-editor {
     width: 100%;
 }
 
-.form-page .form .form-bottom {
+.banner-form-page .form .form-bottom {
     max-width: 80vw;
     display: flex;
     flex-direction: column;
     gap: 2vw;
 }
 
-.form-button{
+.form-button {
     align-self: flex-end;
     display: flex;
     gap: 2vw;
 }
 
-.form-page .form-container::-webkit-scrollbar {
+.banner-form-page .form-container::-webkit-scrollbar {
     width: 0.4vw;
- }
- 
- .form-page .form-container::-webkit-scrollbar-track {
+}
+
+.banner-form-page .form-container::-webkit-scrollbar-track {
     background: #ffffff;
     border-radius: 0.1vw;
- }
- 
- .form-page .form-container::-webkit-scrollbar-thumb {
+}
+
+.banner-form-page .form-container::-webkit-scrollbar-thumb {
     background: #178DE2;
     border-radius: 0.1vw;
- }
- 
- .form-page .form-container::-webkit-scrollbar-thumb:hover {
+}
+
+.banner-form-page .form-container::-webkit-scrollbar-thumb:hover {
     background: #2886ca;
- }
+}
+
+@media (max-width: 480px) {
+    .banner-form-page .form-container .form form .form-top {
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+
+    .banner-form-page .form-container .form form .form-top .form-left,
+    .banner-form-page .form-container .form form .form-top .form-right {
+        width: 100%;
+    }
+
+    .banner-form-page .form-container .form form .form-top .form-left .image-upload-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
