--- a/front-end/src/pages/BannersManagementPage/BannersOverviewPage/BannersOverviewPage.css
+++ b/front-end/src/pages/BannersManagementPage/BannersOverviewPage/BannersOverviewPage.css
@@ -40,3 +40,66 @@
     height: auto;
     aspect-ratio: 16/9;
 }
+
+@media (max-width: 480px) {
+    .banner-overview-page {
+        max-width: 100%;
+    }
+
+    .banner-container {
+        width: 100%;
+        max-width: 85%;
+    }
+
+    .banner-toolbars {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .banner-toolbars .action-container {
+        width: 100%;
+        gap: 10px;
+        justify-content: space-between;
+    }
+
+    .banner-toolbars button, .search-container button {
+        font-size: 10px;
+        height: 30px;
+        min-width: 80px;
+    }
+
+    .banner-toolbars .search-container {
+        width: 100%;
+        justify-content: center;
+    }
+
+    .banner-selection-page .achievement-card-list {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .banner-selection-page .achievement-card {
+        width: 100%;
+        height: 80px;
+    }
+}
+
+@media (min-width: 480px) and (max-width: 768px)  {
+    .banner-overview-page {
+        max-width: 100%;
+    }
+
+    .banner-container {
+        width: 100%;
+        max-width: 90%;
+    }
+
+    .banner-toolbars {
+        flex-direction: row;
+    }
+
+    .banner-toolbars button {
+        font-size: 10px;
+    }
+}
