--- a/front-end/src/pages/FAQsManagementPages/FAQsFormPage/FAQsFormPage.css
+++ b/front-end/src/pages/FAQsManagementPages/FAQsFormPage/FAQsFormPage.css
@@ -46,3 +46,19 @@
     align-self: flex-end;
     gap: 2vw;
 }
+
+@media (max-width: 480px) {
+    .faqs-form-page .faqs-form {
+        width: 90%;
+    }
+
+    .faqs-form-top {
+        flex-direction: column-reverse;
+    }
+
+    .faqs-form-left, .faqs-form-right {
+        width: 100%;
+        display: flex;
+        align-items: end;
+    }
+}
