--- a/front-end/src/pages/PersonnelManagementPage/PersonnelOverviewPage/PersonnelOverviewPage.css
+++ b/front-end/src/pages/PersonnelManagementPage/PersonnelOverviewPage/PersonnelOverviewPage.css
@@ -1,4 +1,4 @@
-.personnel-overview-page{
+.personnel-overview-page {
     max-width: 85vw;
     width: 100%;
     height: 100vh;
@@ -6,7 +6,7 @@
     flex-direction: column;
 }
 
-.personnel-container{
+.personnel-container {
     margin-top: 3vw;
     max-width: 80%;
     display: flex;
@@ -16,22 +16,75 @@
     gap: 1vw;
 }
 
-.personnel-toolbars{
+.personnel-toolbars {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-.personnel-toolbars .action-container{
+.personnel-toolbars .action-container {
     width: fit-content;
     display: flex;
     gap: 1vw;
 }
 
-.personnel-division{
+.personnel-division {
     width: 100%;
     border: none;
     height: 0.05vw;
     background-color: #ccc;
     margin: 0;
+}
+
+@media (max-width: 480px) {
+    .personnel-overview-page {
+        max-width: 100%;
+    }
+
+    .personnel-container {
+        width: 100%;
+        max-width: 85%;
+    }
+
+    .personnel-toolbars {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .personnel-toolbars .action-container {
+        width: 100%;
+        gap: 10px;
+        justify-content: space-between;
+    }
+
+    .personnel-toolbars button, .search-container button {
+        font-size: 10px;
+        height: 30px;
+        min-width: 80px;
+    }
+
+    .personnel-toolbars .search-container {
+        width: 100%;
+        justify-content: center;
+    }
+}
+
+@media (min-width: 480px) and (max-width: 768px)  {
+    .personnel-overview-page {
+        max-width: 100%;
+    }
+
+    .personnel-container {
+        width: 100%;
+        max-width: 90%;
+    }
+
+    .personnel-toolbars {
+        flex-direction: row;
+    }
+
+    .personnel-toolbars button {
+        font-size: 10px;
+    }
 }
